# google-searchconsole

./: .gitignore  .travis.yml  LICENSE  README.md  auth.tar.enc  doctests.py  pyproject.toml  requirements.txt  setup.py  tests.py  tox.ini
.github/workflows/: tests.yml
searchconsole/: __init__.py  account.py  auth.py  query.py
src/searchconsole/: __init__.py  account.py  auth.py  query.py  utils.py
