[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name='searchconsole'
description='A wrapper for the Google Search Console API.'
authors = [
  {name = "Josh Carty", email = "carty.josh@gmail.com"},
]
version='0.0.3'
license='MIT'
dependencies = [
    "google-api-python-client>=1.7.3",
    "google-auth>=1.5.0",
    "google-auth-oauthlib>=0.2.0",
    "python-dateutil>=2.7.3",
]

[tool.setuptools.packages.find]
where = ["src"]
